
	**************************************************
	*						 *
	*	       2.11 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.11.1 patched


BUG FIXES

    o	R CMD Rd2dvi failed if run from a path with name containing
	spaces.  This affected R CMD check, which called Rd2dvi.



		CHANGES IN R VERSION 2.11.1


NEW FEATURES

    o	R CMD INSTALL checks if dependent packages are available early on
	in the installation of source packages, thereby giving clearer
	error messages.

    o	R CMD INSTALL --build now names the file in the format used
	for Mac OS X binary files on that platform.

    o	BIC() in package stats4 now also works with multiple fitted models,
	analogously to AIC().


DEPRECATED & DEFUNCT

    o	Use of file extension .C for C++ code in packages is now
	deprecated: it has caused problems for some 'make's on
	case-insensitive file systems (although it currently works
	with the recommended toolkits).


INSTALLATION

    o	Command 'gnutar' is preferred to 'tar' when configure sets
	TAR.  This is needed on Mac OS 10.6, where the default tar,
	bsdtar 2.6.2, has been reported to produce archives with
	illegal extensions to tar (according to the POSIX standard).


BUG FIXES

    o	The C function mkCharLenCE now no longer reads past 'len' bytes
	(unlikely to be a problem except in user code). (PR#14246)

    o	On systems without any default LD_LIBRARY_PATH (not even
	/usr/local/lib), [DY]LIB_LIBRARY_PATH is now set without a
	trailing colon.	 (PR#13637)

    o	More efficient utf8ToInt() on long multi-byte strings with
	many multi-byte characters.  (PR#14262)

    o	aggregate.ts() gave platform-depedent results due to rounding
	error for ndeltat != 1.

    o 	package.skeleton() sometimes failed to fix filenames for .R or
    	.Rd files to start with an alphanumeric.  (PR#14253)
	It also failed when only an S4 class without any methods was
	defined.  (PR#14280)
