@@ -101,7 +101,7 @@ install.packages <-
              type = getOption("pkgType"),
              configure.args = getOption("configure.args"),
              configure.vars = getOption("configure.vars"),
-             clean = FALSE, Ncpus = getOption("Ncpus"), ...)
+             clean = FALSE, Ncpus = getOption("Ncpus"), INSTALL_opts, ...)
 {
     if (is.logical(clean) && clean)
         clean <- "--clean"
@@ -310,11 +310,14 @@ install.packages <-
         } else
             cmd0 <- paste(paste("R_LIBS", shQuote(libpath), sep="="), cmd0)
 
-    if(is.null(repos) & missing(contriburl)) {
-        ## install from local source tarballs
-        update <- cbind(path.expand(pkgs), lib) # for side-effect of recycling to same length
-        if (is.character(clean))
+    if (is.character(clean))
             cmd0 <- paste(cmd0, clean)
+    if (!missing(INSTALL_opts))
+        cmd0 <- paste(cmd0, paste(INSTALL_opts, collapse = " "))
+
+    if(is.null(repos) & missing(contriburl)) {
+        ## install from local source tarball(s)
+        update <- cbind(path.expand(pkgs), lib) # for side-effect of recycling to same length
 
         for(i in seq_len(nrow(update))) {
             cmd <- paste(cmd0, "-l", shQuote(update[i, 2L]),
@@ -362,11 +365,11 @@ install.packages <-
             ## can't use update[p0, ] due to possible multiple matches
             update <- update[sort.list(match(pkgs, p0)), ]
         }
-        if (is.character(clean))
-            cmd0 <- paste(cmd0, clean)
 
         if (is.null(Ncpus)) Ncpus <- 1L
         if (Ncpus > 1L && nrow(update) > 1L) {
+            ## if --no-lock/--unsafe was specified in INSTALL_opts
+            ## that will override this.
             cmd0 <- paste(cmd0, "--pkglock")
             tmpd <- file.path(tempdir(), "make_packages")
             if (!file.exists(tmpd) && !dir.create(tmpd))
